# AiLearn

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  validate.py
ai/diagnostic/: pyproject.toml
ai/diagnostic/src/ailearn_diagnostic/: __init__.py  engine.py  loaders.py  mastery.py  models.py  session.py
apps/api/: Dockerfile  pyproject.toml  railway.toml
apps/api/src/ailearn_api/: __init__.py  admin_guard.py  admin_session_store.py  config.py  curriculum.py  demo_data.py  diagnostic_session_store.py  durable_session_store.py  evidence_client.py  gotrue_client.py  main.py  profiles_client.py  students_client.py  supabase_client.py  teacher_fixtures.py  teacher_plan_store.py  teacher_projection.py
apps/api/src/ailearn_api/models/: admin_auth.py  diagnostic_session.py  evidence.py  progress.py  student.py  system_status.py
apps/api/src/ailearn_api/routes/: admin_auth.py  classes.py  demo.py  diagnostics.py  health.py  lesson_plans.py  remediation.py  reports.py  students.py  system_status.py
apps/api/src/ailearn_api/scripts/: seed_fixtures.py
apps/api/tests/: conftest.py  test_admin_auth.py  test_admin_session_store.py  test_config.py  test_demo.py  test_diagnostics_probe.py  test_diagnostics_session.py  test_durable_routes.py  test_durable_session_store.py  test_eval_golden.py  test_evidence.py  test_gotrue_client.py  test_health.py  test_lesson_plans.py  test_profiles_client.py  test_remediation.py  test_reports.py  test_seed_fixtures.py  test_students.py  test_students_client.py  test_system_status.py  test_teacher_projection.py
docs/: API_CONTRACTS.md  ARCHITECTURE.md  DEMO_PLAN.md  TEACHER_WORKSPACE_DEMO_DATA_MAP.md  (+1 more)
(+167 files in other folders)
