[project]
name = "ailearn-diagnostic"
version = "0.1.0"
description = "Diagnostic evidence foundation stubs (no full engine)"
requires-python = ">=3.12,<3.13"
dependencies = [
  "ailearn-schemas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ailearn_diagnostic"]

[tool.uv.sources]
ailearn-schemas = { path = "../../packages/schemas", editable = true }
