[project]
name = "ailearn-api"
version = "0.1.0"
description = "AiLearn infrastructure walking-skeleton API"
requires-python = ">=3.12,<3.13"
dependencies = [
  "ailearn-diagnostic",
  "ailearn-schemas",
  "fastapi>=0.116.0,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
  "mypy>=1.16.0,<2.0.0",
  "pytest>=8.4.0,<9.0.0",
  "pytest-cov>=6.2.0,<7.0.0",
  "ruff>=0.12.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ailearn_api"]

[tool.uv.sources]
ailearn-schemas = { path = "../../packages/schemas", editable = true }
ailearn-diagnostic = { path = "../../ai/diagnostic", editable = true }

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=ailearn_api --cov-report=term-missing"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["ailearn_api"]
mypy_path = "src"
